@@ -137,10 +137,10 @@ SCIP_DECL_VARCOPY(varCopyObj)
    {
       assert(*result == SCIP_SUCCESS);
       
-      /* create transformed user problem data */
+      /* create traget user problem data */
       *targetdata = new SCIP_VARDATA;
       (*targetdata)->objvardata = objvardata; /*lint !e40*/
-      (*targetdata)->deleteobject = sourcedata->deleteobject;
+      (*targetdata)->deleteobject = TRUE; /* always delete object, because we created it */
    }
    else
    {
