@@ -43,6 +43,7 @@ fixed bugs:
 - fixed bug in cons_abspower: wrong infinity check when propagating bounds
 - fixed bugs in sepa_oddcylce: number of arcs have to be adjusted, handle implicit binary variables,
   fixed bug in heuristic separation method, fixed asserts
+- fixed bugs with freeing C++ object data for problem and variables
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
